# interq_cip_qhs

./: .gitignore  pyproject.toml
src/interq_cip_qhs/: config.py
src/interq_cip_qhs/notebooks/: analyze_milling_correlation.py  data_tamper.ipynb  final_review_meeting.ipynb  milling_error_list.txt  post_all_data.py  post_milling_demo.py  quality_data_cylinder_bottom.csv  quality_data_piston_rods.csv  quality_data_sawing.csv  sample_json.json  test_read.ipynb  visualize_milling_data.ipynb  visualize_milling_data.py
src/interq_cip_qhs/notebooks/100101_11_29_2022_12_30_29/: part1_cwt_skimage.npy  part1_cwt_tf.npy  part2_cwt_skimage.npy  part2_cwt_tf.npy  part_1_timestamp_process_pairs.json  part_2_bfc_data.json  part_2_timestamp_process_pairs.json
src/interq_cip_qhs/process/: milling.py  sawing.py  turning.py  utils.py
src/interq_cip_qhs/product/: milling.py  sawing.py  turning.py
src/interq_cip_qhs/tmp_files/: tmp_bfc_data.csv  tmp_data.csv
