[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interq_cip_qhs"
version = "0.0.1"
authors = [
  { name = "Nicolas Jourdan", email = "nicolas.jourdan@tu-darmstadt.de" },
]
description = "Package containing tools for generating InterQ quality hallmarks from the CiP learning factory data"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["tsfresh", "numpy", "h5py", "ciso8601", "docker", "requests"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
